<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <include layout="@layout/include_basetitle" />

        <RelativeLayout
            android:id="@+id/layout_hello_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <include layout="@layout/layout_hello" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_loginid"
            style="@style/textThemeDarkLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_loginid"
            android:singleLine="true"
            android:inputType="phone"
            android:maxLength="11"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/layout_hello_parent"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_code"
            style="@style/textThemeDarkLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_msg_code"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="20"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/et_loginid"
            />

        <TextView
            android:id="@+id/btn_send_code"
            style="@style/textThemeDarkLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/btn_white_bg_blue_border_style"
            android:gravity="center"
            android:padding="3dip"
            android:text="@string/send_msg_code"
            android:textColor="@color/text_color_blue"
            app:layout_constraintBottom_toBottomOf="@id/et_code"
            app:layout_constraintRight_toRightOf="@id/et_code" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_reset_password"
            android:inputType="textPassword"
            android:singleLine="true"
            style="@style/textThemeDarkLarge"
            android:maxLength="16"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"

            app:layout_constraintTop_toBottomOf="@id/et_code"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_reset_password_sure"
            android:inputType="textPassword"
            android:singleLine="true"
            style="@style/textThemeDarkLarge"
            android:maxLength="16"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"

            app:layout_constraintTop_toBottomOf="@id/et_pwd"
            />


        <Button
            android:id="@+id/btn_submit"
            style="@style/btnThemeDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="28dip"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/sure"
            app:layout_constraintTop_toBottomOf="@id/et_pwd_again"
            android:textSize="@dimen/text_size_xlarge"
            android:enabled="false"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>