<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <include layout="@layout/include_basetitle" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#dddddd"
            app:layout_constraintTop_toBottomOf="@id/toolbar"

            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_old_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_reset_old_password"
            android:inputType="textPassword"
            android:singleLine="true"
            style="@style/textThemeDarkLarge"
            android:maxLength="16"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="40dip"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_reset_password"
            android:inputType="textPassword"
            android:singleLine="true"
            style="@style/textThemeDarkLarge"
            android:maxLength="16"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/et_old_pwd"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pwd_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_reset_password_sure"
            android:inputType="textPassword"
            android:singleLine="true"
            style="@style/textThemeDarkLarge"
            android:maxLength="16"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/et_pwd"
            />


        <Button
            android:id="@+id/btn_submit"
            style="@style/btnThemeDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginTop="28dip"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:text="@string/sure"
            app:layout_constraintTop_toBottomOf="@id/et_pwd_again"
            android:textSize="@dimen/text_size_xlarge"
            android:enabled="false"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>