<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity"
    android:background="@color/white"
    >

    <include layout="@layout/include_basetitle" />


    <LinearLayout
        android:id="@+id/layout_loginid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_very_largge"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_login_phone"
            android:paddingLeft="@dimen/margin_largge"
            android:paddingRight="@dimen/margin_largge"
            />
        <View
            android:layout_width="1dip"
            android:layout_height="20dip"
            android:background="@color/color_login_line"
            android:layout_marginRight="@dimen/margin_largge"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_loginid"
            style="@style/textThemeDarkLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_loginid"
            android:singleLine="true"
            android:inputType="phone"
            android:maxLength="11"
            android:background="@color/transparent"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/btn_send_code"
        style="@style/textThemeDarkLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:background="@drawable/btn_white_bg_blue_border_style"
        android:gravity="center"
        android:padding="3dip"
        android:text="@string/send_msg_code"
        android:textColor="@color/text_color_blue"
        app:layout_constraintBottom_toBottomOf="@id/layout_loginid"
        app:layout_constraintRight_toRightOf="@id/layout_loginid" />
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/color_login_line"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/margin_largge"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/layout_loginid"
        />
    <LinearLayout
        android:id="@+id/layout_msg_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/line1"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_login_msg_code"
            android:paddingLeft="@dimen/margin_largge"
            android:paddingRight="@dimen/margin_largge"
            />
        <View
            android:layout_width="1dip"
            android:layout_height="20dip"
            android:background="@color/color_login_line"
            android:layout_marginRight="@dimen/margin_largge"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_msg_code"
            android:singleLine="true"
            style="@style/textThemeDarkLarge"
            android:inputType="number"
            android:maxLength="20"
            android:background="@color/transparent"
            />

    </LinearLayout>
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/color_login_line"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/margin_largge"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/layout_msg_code"
        />
    <LinearLayout
        android:id="@+id/layout_nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/line2"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_login_nike"
            android:paddingLeft="@dimen/margin_largge"
            android:paddingRight="@dimen/margin_largge"
            />
        <View
            android:layout_width="1dip"
            android:layout_height="20dip"
            android:background="@color/color_login_line"
            android:layout_marginRight="@dimen/margin_largge"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nick"
            android:inputType="text"
            android:singleLine="true"
            style="@style/textThemeDarkLarge"
            android:maxLength="16"
            android:background="@color/transparent"
            />

    </LinearLayout>
    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/color_login_line"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/margin_largge"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/layout_nick"
        />
    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/line3"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_login_pwd"
            android:paddingLeft="@dimen/margin_largge"
            android:paddingRight="@dimen/margin_largge"
            />
        <View
            android:layout_width="1dip"
            android:layout_height="20dip"
            android:background="@color/color_login_line"
            android:layout_marginRight="@dimen/margin_largge"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="6~16位数字或字母，区分大小写"
            android:inputType="textPassword"
            android:singleLine="true"
            style="@style/textThemeDarkLarge"
            android:maxLength="16"
            android:background="@color/transparent"
            />

    </LinearLayout>
    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/color_login_line"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/margin_largge"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/layout_password"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/margin_largge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line4"
        style="@style/textThemeDarkLarge"
        android:text="注册即视为同意《乾信拍服务协议》"
        />



    <Button
        android:id="@+id/btn_submit"
        style="@style/btnThemeDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_very_largge"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="@string/regist"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintTop_toBottomOf="@id/tv_user_agreement"
        />

</androidx.constraintlayout.widget.ConstraintLayout>