<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity"
    android:background="@color/white"
    >

    <include layout="@layout/include_basetitle" />

    <RelativeLayout
        android:id="@+id/layout_hello_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <include layout="@layout/layout_hello" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/layout_loginid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/layout_hello_parent"
        android:gravity="center"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_login_phone"
            android:paddingLeft="@dimen/margin_largge"
            android:paddingRight="@dimen/margin_largge"
            />
        <View
            android:layout_width="1dip"
            android:layout_height="20dip"
            android:background="@color/color_login_line"
            android:layout_marginRight="@dimen/margin_largge"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_loginid"
            style="@style/textThemeDarkLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_loginid"
            android:singleLine="true"
            android:inputType="phone"
            android:maxLength="11"
            android:background="@color/transparent"
            />
    </LinearLayout>
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/color_login_line"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/margin_largge"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/layout_loginid"
        />
    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/line1"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_login_pwd"
            android:paddingLeft="@dimen/margin_largge"
            android:paddingRight="@dimen/margin_largge"
            />
        <View
            android:layout_width="1dip"
            android:layout_height="20dip"
            android:background="@color/color_login_line"
            android:layout_marginRight="@dimen/margin_largge"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:singleLine="true"
            style="@style/textThemeDarkLarge"
            android:maxLength="16"
            android:background="@color/transparent"
            />

    </LinearLayout>
    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/color_login_line"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/margin_largge"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@id/layout_password"
        />
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkbox_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/margin_largge"
        android:text="记住密码"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2"
        android:gravity="center"

        />
    <TextView
        android:id="@+id/btn_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_normal"
        android:paddingRight="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:text="忘记密码？"
        android:textColor="@color/text_color_blue"
        android:layout_marginRight="@dimen/margin_xlargge"
        android:paddingTop="@dimen/margin_normal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkbox_remember"
        android:background="@drawable/item_background_material"
        />


    <Button
        android:id="@+id/btn_login"
        style="@style/btnThemeDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_very_largge"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="立即登录"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintTop_toBottomOf="@id/checkbox_remember"
         />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dip"
        android:paddingBottom="@dimen/margin_largge"
        style="@style/textThemeDarkLarge"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/btn_regist"
        style="@style/btnThemeTrans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:text="没有账户？去注册"
        android:textSize="@dimen/text_size_xlarge"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        />

</androidx.constraintlayout.widget.ConstraintLayout>